fixed size spacing on home

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -13,7 +13,7 @@
 $hero-spacing: 21vh;
 
 .hero-text {
-  margin: #{$spacing-large * 2} 0 #{$spacing-large * 2.5} 0;
+  margin: #{$spacing-large * 2} 0 #{$spacing-large * 2.25} 0;
   //margin: #{$hero-spacing * .8} 0 #{$hero-spacing} 0;
 
   p {
